--- a/BHDemo/StockMicroservice/Properties/launchSettings.json
+++ b/BHDemo/StockMicroservice/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/stocks",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "StockMicroservice": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/stocks",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
